Enhance styling on weather template plus improve background images

--- a/pro_farm/templates/wheather.html
+++ b/pro_farm/templates/wheather.html
@@ -30,6 +30,21 @@
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+    
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item active"><a href="about.html" class="nav-link">Weather</a></li>
+                    <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <!-- ended navbar -->
 
@@ -190,8 +205,10 @@
     </section>
 
 
+<!-- ============================================================================================================== -->
 
-    <section class="ftco-section ftco-section-parallax ftco-degree-bg">
+
+    <!-- <section class="ftco-section ftco-section-parallax ftco-degree-bg"> -->
         <!-- <div class="container">
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
@@ -200,8 +217,9 @@
                 </div>
             </div>
         </div> -->
-        <div class="parallax-img-3 d-flex align-items-center">
-            <div class="container">
+        <!-- <div class="parallax-img d-flex align-items-center" style="background-image:url(../static/images/night_image4.jpg);"> -->
+            <!-- <div class="img" style="background-image:url(../static/images/c.png);">></div> -->
+            <!-- <div class="container">
                 <div class="row justify-content-center mb-5 pb-5">
                     <div class="col-md-7 text-center heading-section ftco-animate">
                         <h2 style="color:white;">Weather of your location</h2>
@@ -213,9 +231,9 @@
                         <div class="media block-6 services d-block text-center">
                             <div class="d-flex justify-content-center">
                                 <div class="icon color-1 d-flex justify-content-center mb-3"><span
-                                        class="align-self-center fas fa-cloud-moon-rain"></span></div>
+                                        class="align-self-center fas fa-cloud-moon-rain"></span></div> -->
                                 <!-- fa fa-sun-o, fa-cloud, moon-o, fas fa-cloud-moon-rain, fas fa-cloud-moon, fas fa-cloud-sun-rain, fas fa-cloud-rain, fas fa-cloud-showers-heavy, fas fa-cloud-sun, fas fa-sun, fas fa-wind, fas fa-bolt -->
-                            </div>
+                            <!-- </div>
                             <div class="media-body p-2">
                                 
                                 <p style="color:white;">Partly cloudy.</p>
@@ -226,16 +244,16 @@
                     </div>
                     <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                         <div class="media block-6 services d-block text-center">
-                            <!-- <div class="d-flex justify-content-center">
+                            <div class="d-flex justify-content-center">
                                 <div class="icon color-2 d-flex justify-content-center mb-3"><span
                                         class="align-self-center icon-gears"></span></div>
                             </div> -->
-                            <div class="media-body p-2">
+                            <!-- <div class="media-body p-2">
                                 <p style="position: relative; margin-top:10px; color:white;">Max 30&#176</p>
                                 <p style="color:white;">Min 25&#176</p>
                             </div>
                         </div>
-                    </div>
+                    </div> --> 
                     <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                         <div class="media block-6 services d-block text-center">
                             <div class="d-flex justify-content-center">
@@ -250,15 +268,188 @@
                         </div>
                     </div> -->
         
-                    <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-                        <div class="media block-6 services d-block text-center">
+                    <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block text-center"> -->
                             <!-- <div class="d-flex justify-content-center">
                                 <div class="icon color-4 d-flex justify-content-center mb-3"><span
                                         class="align-self-center icon-live_help"></span></div>
                             </div> -->
+                            <!-- <div class="media-body p-2">
+                                <p style="position:relative; margin-top:10px; color:white;">Precipitation: 20%</p>
+                                <p style="color:white;">Wind: 4KMPH</p>
+                                <p style="color:white;">Humidity: 90%</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row"> <br></div> <br> <br>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2 hover" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fa fa-sun-o"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fas fa-cloud-showers-heavy"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fas fa-cloud-rain"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fas fa-cloud-sun-rain"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fas fa-bolt"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-2 ftco-animate">
+                        <a href="#">
+                            <div class="blog-entry-2" data-aos-delay="100">
+                                <div class="text p-4">
+                                    <div class="meta mb-3">
+                                        <div>Tue, 1</div> <br>
+                                        <div>27&#176</div>
+                                        <div><span class="fa fa-cloud"></span></div>
+                                    </div>
+                                    <p>Max 30&#176</p>
+                                    <p>Min 25&#176</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+
+
+
+    <section class="ftco-section ftco-section-parallax ftco-degree-bg">
+        <!-- <div class="container">
+                <div class="row justify-content-center mb-5 pb-5">
+                    <div class="col-md-7 text-center heading-section ftco-animate">
+                        <h2>Weather of your location</h2>
+                        <span class="subheading">Ambala, Haryana</span>
+                    </div>
+                </div>
+            </div> -->
+        <div class="parallax-img d-flex align-items-center"
+            style="background-image:url(../static/images/clear_image.png);">
+            <!-- <div class="img" style="background-image:url(../static/images/c.png);">></div> -->
+            <div class="container">
+                <div class="row justify-content-center mb-5 pb-5 mt-1 pt-1">
+                    <div class="col-md-7 text-center heading-section ftco-animate">
+                        <h3 style="color:white;">Weather of Ambala, Haryana</h3>
+                        <!-- <span class="heading">Ambala, Haryana</span> -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block text-center">
+                            <div class="d-flex justify-content-center">
+                                <div class="icon color-1 d-flex justify-content-center mb-3"><span
+                                        class="align-self-center fas fa-cloud-moon-rain"></span></div>
+                                <!-- fa fa-sun-o, fa-cloud, moon-o, fas fa-cloud-moon-rain, fas fa-cloud-moon, fas fa-cloud-sun-rain, fas fa-cloud-rain, fas fa-cloud-showers-heavy, fas fa-cloud-sun, fas fa-sun, fas fa-wind, fas fa-bolt -->
+                            </div>
                             <div class="media-body p-2">
-                                <!-- <link rel="icon" type="image/png" href="images/icons/favicon.ico" /> -->
-                                <img style='font-size:24px' rel="icon" type="image/png" src="/../farm_app/pro_farm/static/images/icons/favicon.ico" alt="">
+
+                                <p style="color:white;">Partly cloudy.</p>
+                            </div>
+
+                        </div>
+                        <h3 style="position: relative; margin-left:10px; margin-top:20px; color:white;"> 27&#176</h3>
+                    </div>
+                    <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block text-center">
+                            <!-- <div class="d-flex justify-content-center">
+                                    <div class="icon color-2 d-flex justify-content-center mb-3"><span
+                                            class="align-self-center icon-gears"></span></div>
+                                </div> -->
+                            <div class="media-body p-2">
+                                <p style="position: relative; margin-top:10px; color:white;">Max 30&#176</p>
+                                <p style="color:white;">Min 25&#176</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+                            <div class="media block-6 services d-block text-center">
+                                <div class="d-flex justify-content-center">
+                                    <div class="icon color-3 d-flex justify-content-center mb-3"><span
+                                            class="align-self-center icon-paper-plane"></span></div>
+                                </div>
+                                <div class="media-body p-2">
+                                    <h3 class="heading">Advanced Visualizations</h3>
+                                    <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                                        unorthographic.</p>
+                                </div>
+                            </div>
+                        </div> -->
+
+                    <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+                        <div class="media block-6 services d-block text-center">
+                            <!-- <div class="d-flex justify-content-center">
+                                    <div class="icon color-4 d-flex justify-content-center mb-3"><span
+                                            class="align-self-center icon-live_help"></span></div>
+                                </div> -->
+                            <div class="media-body p-2">
                                 <p style="position:relative; margin-top:10px; color:white;">Precipitation: 20%</p>
                                 <p style="color:white;">Wind: 4KMPH</p>
                                 <p style="color:white;">Humidity: 90%</p>
@@ -364,7 +555,7 @@
     </section>
 
 
-
+<!-- ================================================================================================================= -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
