--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -50,7 +50,7 @@
           </div>
           <input type="hidden" name="lang" value={{lang}}>
           <input type="hidden" name="phone" value={{phone}}>
-          <input type="hidden" name="name" value={{name}}>
+          <input type="hidden" name="name" value="{{name}}">
           <br>
           <div class="wrap-input100 validate-input">
             <input class="input100" type="password" name="password-confirm" placeholder={{password_list[2]}}>
