--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,13 +9,13 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\animate.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.theme.default.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\magnific-popup.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.carousel.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\flaticon.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\style.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\icomoon.css">
+    <link rel="stylesheet" href="..\static\css\animate.css">
+    <link rel="stylesheet" href="..\static\css\owl.theme.default.min.css">
+    <link rel="stylesheet" href="..\static\css\magnific-popup.css">
+    <link rel="stylesheet" href="..\static\css\owl.carousel.min.css">
+    <link rel="stylesheet" href="..\static\css\flaticon.css">
+    <link rel="stylesheet" href="..\static\css\style.css">
+    <link rel="stylesheet" href="..\static\css\icomoon.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 
