--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -19,12 +19,7 @@
     <link rel="stylesheet" href="..\static\css\style.css">
     <link rel="stylesheet" href="..\static\css\icomoon.css">
 </head>
-<<<<<<< HEAD:templates/user_home.html
 
-<body>
-    <!-- ============================================================================================================= -->
-
-=======
 
 <body>
     <!-- ============================================================================================================= -->
@@ -56,28 +51,19 @@
 
     <!-- ============================================================================================================= -->
 
->>>>>>> web_app_front:pro_farm/templates/index.html
 
     <!-- navbar started -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
+            <a class="navbar-brand" href="user_home.html">The<span>F</span>armer</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
-<<<<<<< HEAD:templates/user_home.html
-
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-=======
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">weather</a></li>
->>>>>>> web_app_front:pro_farm/templates/index.html
+                    <li class="nav-item active"><a href="user_home.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="wheather.html" class="nav-link">weather</a></li>
                     <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
                     <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -100,11 +86,7 @@
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-<<<<<<< HEAD:templates/user_home.html
-                                <h1 class="mb-4 navbar-brand">Kisan<span
-=======
                                 <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
@@ -116,11 +98,7 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-<<<<<<< HEAD:templates/user_home.html
-                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
-=======
                                                 style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -141,11 +119,7 @@
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-<<<<<<< HEAD:templates/user_home.html
-                                <h1 class="mb-4 navbar-brand">Kisan<span
-=======
                                 <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
@@ -157,11 +131,7 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-<<<<<<< HEAD:templates/user_home.html
-                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
-=======
                                                 style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -180,11 +150,7 @@
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-<<<<<<< HEAD:templates/user_home.html
-                                <h1 class="mb-4 navbar-brand">Kisan<span
-=======
                                 <h1 class="mb-4 navbar-brand" style="font-weight: 500; font-family:Georgia, 'Times New Roman', Times, serif;">Kisan<span
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: #fff;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
@@ -196,11 +162,7 @@
                                     <div class="col-md-3">
                                         <a href="#">
                                             <img src="../static/images/edited_vali4.png"
-<<<<<<< HEAD:templates/user_home.html
-                                                style="border-radius: 50%; width: 150px; height: 150px;" alt="">
-=======
                                                 style="border-radius: 50%; width: 150px; height: 150px;" onclick="openNav()" alt="">
->>>>>>> web_app_front:pro_farm/templates/index.html
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -235,18 +197,10 @@
         </div>
     </section>
     <!-- Heading ended -->
-<<<<<<< HEAD:templates/user_home.html
-=======
 
->>>>>>> web_app_front:pro_farm/templates/index.html
 
     <!-- =============================================================================================================== -->
 
-<<<<<<< HEAD:templates/user_home.html
-    <!-- =============================================================================================================== -->
-
-=======
->>>>>>> web_app_front:pro_farm/templates/index.html
 
     <!-- Main features in cards -->
     <section class="ftco-section-parallax degree-right">
@@ -306,19 +260,13 @@
         </div>
     </section>
     <!-- Main features to be shown ended -->
-<<<<<<< HEAD:templates/user_home.html
 
-=======
->>>>>>> web_app_front:pro_farm/templates/index.html
 
     <!-- =============================================================================================================== -->
 
     <!-- =============================================================================================================== -->
 
-<<<<<<< HEAD:templates/user_home.html
-=======
 
->>>>>>> web_app_front:pro_farm/templates/index.html
     <!-- Section where videos are added -->
     <section class="ftco-section">
         <div class="container-fluid">
@@ -426,7 +374,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
@@ -446,8 +393,6 @@
     <!-- ending of yojnaassss -->
 
 
-<<<<<<< HEAD:templates/user_home.html
-=======
     <!-- =========================================================================================================== -->
 
 
@@ -459,18 +404,14 @@
                 target="_blank">Click here
                 to associate with <strong>PM-KISAN-SAMMAN-NIDHI-YOJANA</strong></a>
         </div>
-    
         <div>
             <a href="https://kisansamadhan.com/central-government-schemes/ " target="_blank">Click here to know all details
                 of
                 <strong>CENTRAL-GOVERNMENT-SCHEMES</strong></a>
         </div>
-    
-    
     </section>
 
 
->>>>>>> web_app_front:pro_farm/templates/index.html
     <!-- ============================================================================================================ -->
 
 
@@ -480,12 +421,6 @@
             <div class="row mb-5">
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-<<<<<<< HEAD:templates/user_home.html
-                        <h2 class="ftco-heading-2">Company</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there
-                            live the blind texts.</p>
-=======
                         <h2 class="ftco-heading-2">DEVELOPERS</h2>
                         <p><strong style="color:#d1002c;"> PRO-CODERS</strong>
                         <div>Aaditya Singhal </div>
@@ -493,7 +428,6 @@
                         <div>Ayush Malik </div>
                         <div>Akshita Sharma </div>
                         </p>
->>>>>>> web_app_front:pro_farm/templates/index.html
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -518,13 +452,6 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">CONTACT</h2>
                         <ul class="list-unstyled">
-<<<<<<< HEAD:templates/user_home.html
-                            <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a>
-                            </li>
-                            <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                            <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                            <li><a href="#" class="py-2 d-block">email@email.com</a></li>
-=======
                             <li><a href="#" class="py-2 d-block " style=" color: #d1002c ;">Aaditya Singhal -<a
                                         href=" https://github.com/Aaditya1978">https://github.com/Aaditya1978</a></a>
                             </li>
@@ -535,7 +462,6 @@
                             <li><a href="#" class="py-2 d-block" style=" color: #d1002c;">Akshita Sharma - <a
                                         href="https://github.com/akshita-sharma8609 ">https://github.com/akshita-sharma8609</a></a>
                             </li>
->>>>>>> web_app_front:pro_farm/templates/index.html
                         </ul>
                     </div>
                 </div>
@@ -559,14 +485,8 @@
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is
-<<<<<<< HEAD:templates/user_home.html
-                        made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-=======
-                        made <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                        is made <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
                             target="_blank"> &nbsp; PRO-CODERS</a>
->>>>>>> web_app_front:pro_farm/templates/index.html
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
@@ -607,8 +527,6 @@
     <script src="..\static\js\google-map.js"></script>
     <script src="..\static\js\main.js"></script>
 
-<<<<<<< HEAD:templates/user_home.html
-=======
     <script>
         function openNav() {
             document.getElementById("myNav").style.width = "100%";
@@ -618,8 +536,6 @@
             document.getElementById("myNav").style.width = "0%";
         }
     </script>
-
->>>>>>> web_app_front:pro_farm/templates/index.html
 
 </body>
 
