--- a/templates/wheather.html
+++ b/templates/wheather.html
@@ -10,17 +10,17 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\animate.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.theme.default.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\magnific-popup.css">
+    <link rel="stylesheet" href="..\static\css\animate.css">
+    <link rel="stylesheet" href="..\static\css\owl.theme.default.min.css">
+    <link rel="stylesheet" href="..\static\css\magnific-popup.css">
 
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\owl.carousel.min.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\flaticon.css">
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\style.css">
+    <link rel="stylesheet" href="..\static\css\owl.carousel.min.css">
+    <link rel="stylesheet" href="..\static\css\flaticon.css">
+    <link rel="stylesheet" href="..\static\css\style.css">
 
 
 
-    <link rel="stylesheet" href="\..\farm_app\pro_farm\static\css\icomoon.css">
+    <link rel="stylesheet" href="..\static\css\icomoon.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <!-- <link rel="stylesheet" href="\..\racks\css\style.css"> -->
 </head>
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
+            <a class="navbar-brand" href="user_home.html">The<span>F</span>armer</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -37,7 +37,7 @@
     
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="user_home.html" class="nav-link">Home</a></li>
                     <li class="nav-item active"><a href="about.html" class="nav-link">Weather</a></li>
                     <li class="nav-item"><a href="work.html" class="nav-link">Work</a></li>
                     <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
@@ -52,7 +52,7 @@
     <section class="hero-wrap degree-right js-fullheight">
         <div class="home-slider js-fullheight owl-carousel">
             <div class="slider-item js-fullheight"
-                style="background-image:url(/../farm_app/pro_farm/static/images/background4.jpg);">
+                style="background-image:url(../static/images/background4.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -88,7 +88,7 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="/../farm_app/pro_farm/static/images/ambani_sir.jpg"
+                                        <img src="../static/images/ambani_sir.jpg"
                                             style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="slider-item js-fullheight"
-                style="background-image:url(/../farm_app/pro_farm/static/images/kisan-1.png);">
+                style="background-image:url(../static/images/kisan-1.png);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -138,7 +138,7 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="/../farm_app/pro_farm/static/images/ambani_sir.jpg"
+                                        <img src="../static/images/ambani_sir.jpg"
                                             style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="slider-item js-fullheight"
-                style="background-image:url(/../farm_app/pro_farm/static/images/home.png);">
+                style="background-image:url(../static/images/home.png);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -188,7 +188,7 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="/../farm_app/pro_farm/static/images/ambani_sir.jpg"
+                                        <img src="../static/images/ambani_sir.jpg"
                                             style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
@@ -636,20 +636,20 @@
         </svg></div>
     
     
-    <script src="\..\farm_app\pro_farm\static\js\jquery.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery-migrate-3.0.1.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\popper.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\bootstrap.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.easing.1.3.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.waypoints.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.stellar.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\owl.carousel.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.magnific-popup.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\jquery.animateNumber.min.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\scrollax.min.js"></script>
+    <script src="..\static\js\jquery.min.js"></script>
+    <script src="..\static\js\jquery-migrate-3.0.1.min.js"></script>
+    <script src="..\static\js\popper.min.js"></script>
+    <script src="..\static\js\bootstrap.min.js"></script>
+    <script src="..\static\js\jquery.easing.1.3.js"></script>
+    <script src="..\static\js\jquery.waypoints.min.js"></script>
+    <script src="..\static\js\jquery.stellar.min.js"></script>
+    <script src="..\static\js\owl.carousel.min.js"></script>
+    <script src="..\static\js\jquery.magnific-popup.min.js"></script>
+    <script src="..\static\js\jquery.animateNumber.min.js"></script>
+    <script src="..\static\js\scrollax.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="\..\farm_app\pro_farm\static\js\google-map.js"></script>
-    <script src="\..\farm_app\pro_farm\static\js\main.js"></script>
+    <script src="..\static\js\google-map.js"></script>
+    <script src="..\static\js\main.js"></script>
     </body>
     
     </html>
