--- a/templates/confirm_otp.html
+++ b/templates/confirm_otp.html
@@ -68,7 +68,7 @@
           <!-- Some hidden inputs used for backend stuff; so no worries in frontend part -->
           <input type="hidden" name="lang" value={{lang}}>
           <input type="hidden" name="phone" value={{phone}}>
-          <input type="hidden" name="name" value={{name}}>
+          <input type="hidden" name="name" value="{{name}}">
           <input type="hidden" name="otp" value={{otp}}>
 
           <!-- Used to show both the buttons on same level; first one is of submit and other one is of cancel -->
